# vector-it

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.agents-docs/: AGENTS-architecture.md  AGENTS-code-style.md  AGENTS-development-commands.md  AGENTS-testing.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
vectorit-app/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
vectorit-app/src/: App.tsx
vectorit-app/src-tauri/: Cargo.toml  tauri.conf.json
vectorit-app/src-tauri/capabilities/: default.json
vectorit-app/src-tauri/src/: clipboard.rs  commands.rs  dragdrop.rs  lib.rs  main.rs
vectorit-app/src/components/: Canvas.tsx  DropZone.tsx  InlineColorPicker.tsx  ShapePicker.tsx
vectorit-app/src/hooks/: useProgress.ts
vectorit-app/src/stores/: advancedStore.ts  appStore.ts  editorStore.ts  settingsStore.ts  wizardStore.ts
vectorit-app/src/utils/: shapeGenerators.ts
vectorit-core/: Cargo.toml
vectorit-core/benches/: pipeline_bench.rs
vectorit-core/examples/: trace_stages.rs
vectorit-core/src/: aa_detector.rs  corner.rs  decoder.rs  detector.rs  editor.rs  fitter.rs  flatten.rs  lib.rs  optimizer.rs  pipeline.rs  quantizer.rs  resizer.rs  segmenter.rs  simplifier.rs  subpixel.rs  tracer.rs  types.rs
vectorit-core/src/export/: bitmap.rs  dxf.rs  eps.rs  mod.rs  pdf.rs  svg.rs
vectorit-core/tests/: format_tests.rs  golden_svg.rs  property_tests.rs  visual_regression.rs
vectorit-core/tests/snapshots/: golden_svg__golden_svg.snap
(+13 files in other folders)
