[package]
name = "vectorit-app"
version = "0.1.0"
edition = "2024"

[dependencies]
vectorit-core = { path = "../../vectorit-core" }
image = { workspace = true }
palette = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
dirs = "5"
arboard = "3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
resvg = "0.44"

[build-dependencies]
tauri-build = { version = "2", features = [] }
